# Google-File-System

./: .gitignore  README.md  test_e2e.py
benchmarks/: bench_append.py  bench_fault.py  bench_stale_repair.py
chunkserver/: CMakeLists.txt  buffer.cpp  buffer.h  checksum.cpp  checksum.h  heartbeat.cpp  heartbeat.h  main.cpp  storage.cpp  storage.h
client/: cache.py  gfs_client.py  pipeline.py
docker/: Dockerfile.chunkserver  Dockerfile.master  docker-compose.yml
master/: garbage_collection.py  heartbeat.py  lease.py  metadata.py  oplog.py  replication.py  server.py
proto/: chunk.proto  master.proto
